--- a/resources/Makefile
+++ b/resources/Makefile
@@ -1,6 +1,9 @@
 COMMON = random.hpp sha256.cpp passwd-utils.hpp
 
-all: gen-passwd check-passwd
+all: gen-table gen-passwd check-passwd
+
+gen-table: main.cpp $(COMMON)
+	g++ -std=c++17 -fsanitize=address -o $@ $^
 
 gen-passwd: gen-passwd.cpp $(COMMON)
 	g++ -std=c++17 -fsanitize=address -o $@ $^
