Co-authored-by: aminebigham@hotmail.com <aminebigham@hotmail.com>

--- a/resources/Makefile
+++ b/resources/Makefile
@@ -2,7 +2,7 @@ COMMON = random.hpp sha256.cpp passwd-utils.hpp
 
 all: gen-table gen-passwd check-passwd
 
-gen-table: main.cpp $(COMMON)
+gen-table: main.cpp sha256.cpp
 	g++ -std=c++17 -fsanitize=address -o $@ $^
 
 gen-passwd: gen-passwd.cpp $(COMMON)
@@ -12,4 +12,4 @@ check-passwd: check-passwd.cpp $(COMMON)
 	g++ -std=c++17 -fsanitize=address -o $@ $^
 
 clean:
-	rm -rf gen-passwd check-passwd
+	rm -rf gen-passwd check-passwd gen-table *.txt
